--- a/app/views/admin/votings/index.html.slim
+++ b/app/views/admin/votings/index.html.slim
@@ -1,9 +1,17 @@
 h4 votings
 
-table.table
-
+table.table.table-hover
+  tr
+    th ballots
   - @votings.each do |voting|
     tr
       td= voting['id']
       -voting['voting'].each do |vote|
         td= vote
+
+  tr
+    th results
+  tr
+    td contingent
+    td
+      = Voting.current.result.result
