--- a/app/views/votings/show.html.slim
+++ b/app/views/votings/show.html.slim
@@ -11,4 +11,4 @@ h4 your recent selection
         = candidate
         = hidden_field_tag "candidates[]", candidate
 
-  input.button.btn.btn-large.btn-primary(type='submit')= 'submit your selection'
+  input.button.btn.btn-large.btn-primary(type='submit' value="Vote")
